# c-sharp-analyzer-provider-cli

./: .gitignore  Cargo.lock.bak  Cargo.toml  Cargo.toml.bak  Makefile  build.rs  demo-output.yaml  dotnet-base-provider.Dockerfile
.github/workflows/: demo-testing.yml
scripts/: run-demo.sh
src/: lib.rs  main.rs
src/analyzer_service/: mod.rs  provider.rs
src/c_sharp_graph/: builtins.cfg  find_node.rs  language_config.rs  loader.rs  method_query.rs  mod.rs  namespace_query.rs  query.rs  results.rs  stack-graphs.tsg
src/pipe_stream/: mod.rs  server.rs
src/provider/: csharp.rs  dependency_resolution.rs  mod.rs  project.rs  provider.rs
tests/: integration_test.rs
tests/demos/method_search/fqdn_method_search/: demo-output.yaml  request.yaml
tests/demos/method_search/regex_method_search/: demo-output.yaml  request.yaml
tests/demos/namespace_search/fqdn_namespace_search/: demo-output.yaml  request.yaml
tests/demos/namespace_search/intra_regex_search/: demo-output.yaml  request.yaml
