[package]
name = "c-sharp-analyzer-provider-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version="4.5.40", features=["derive"]}
tokio = {version="1.45.1", features=["full"]}
tokio-stream = "0.1.17"
tonic = "0.13.1"
prost = "0.13"
prost-types = "0.13.5"
anyhow = { version = "1.0"}
tree-sitter-stack-graphs = { version = "0.10.0", features=["cli"] }
tree-sitter-c-sharp = "0.23"
create = "0.1.0"
stack-graphs = "0.14.1"
regex = "1.11.1"
http = "1.3.1"
url = "2.5.4"
tonic-reflection = "0.13.1"
utoipa = "5.4.0"
walkdir = "2.5.0"
sha1 = "0.10.6"
base64 = "0.22.1"
serde = {version = "1.0.219", features=["derive"] }
serde_json = "1.0.140"
serde_yml = "=0.0.12"
futures-core = "0.3.31"
async-stream = "0.3.6"
clap-verbosity-flag = {version = "3.0.3", features=["tracing"]}
tracing = "0.1"
tracing-subscriber = {version="0.3", features=["env-filter"]}
tree-sitter-graph = "0.12.0"
which = "8.0.0"
tracing-log = "0.2.0"

[build-dependencies]
tonic-build = "0.13.1"
